// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoration Decoration * overflow: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-10",
        ],
        "nodes": Array [
          Object {
            "raw": "11*",
            "text": "11*",
            "type": "plain",
          },
        ],
        "raw": "[*********** 11*]",
        "rawDecos": "***********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration similar with externalLink: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "hoge ",
            "text": "hoge ",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "https://example.com",
            "type": "link",
          },
        ],
        "raw": "[* hoge https://example.com]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Simple decoration: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[* deco]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-2",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[** deco]",
        "rawDecos": "**",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-3",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[*** deco]",
        "rawDecos": "***",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-4",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[**** deco]",
        "rawDecos": "****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-5",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[***** deco]",
        "rawDecos": "*****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-6",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[****** deco]",
        "rawDecos": "******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-7",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******* deco]",
        "rawDecos": "*******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-8",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******** deco]",
        "rawDecos": "********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-9",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********* deco]",
        "rawDecos": "*********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-10",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********** deco]",
        "rawDecos": "**********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "!",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[! deco]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "\\"",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[\\" deco]",
        "rawDecos": "\\"",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "#",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[# deco]",
        "rawDecos": "#",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "%",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[% deco]",
        "rawDecos": "%",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "&",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[& deco]",
        "rawDecos": "&",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "'",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[' deco]",
        "rawDecos": "'",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "(",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[( deco]",
        "rawDecos": "(",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ")",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[) deco]",
        "rawDecos": ")",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "+",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[+ deco]",
        "rawDecos": "+",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ",",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[, deco]",
        "rawDecos": ",",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "-",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[- deco]",
        "rawDecos": "-",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ".",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[. deco]",
        "rawDecos": ".",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "/",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[/ deco]",
        "rawDecos": "/",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "{",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[{ deco]",
        "rawDecos": "{",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "|",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[| deco]",
        "rawDecos": "|",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "}",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[} deco]",
        "rawDecos": "}",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "<",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[< deco]",
        "rawDecos": "<",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ">",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[> deco]",
        "rawDecos": ">",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "_",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[_ deco]",
        "rawDecos": "_",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "~",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[~ deco]",
        "rawDecos": "~",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;
